Colocando bien los links

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Recetas de Odin</h1>
     <ul>
-        <li><a href="/odin-recipes/recipes/lasagna.html">Receta para una rica Lasagna</a></li>
-        <li><a href="/odin-recipes/recipes/tacos.html">El mejor Taco a lo Mexicano!</a></li>
-        <li><a href="/odin-recipes/recipes/camarones.html">Camarones con Crema</a></li>
+        <li><a href="/recipes/lasagna.html">Receta para una rica Lasagna</a></li>
+        <li><a href="/recipes/tacos.html">El mejor Taco a lo Mexicano!</a></li>
+        <li><a href="/recipes/camarones.html">Camarones con Crema</a></li>
     </ul>
     
 </body>
