Volviendo a usar rutas relativas pero asignando una base

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <base href="/odin-recipes/">
 </head>
 <body>
     <h1>Recetas de Odin</h1>
     <ul>
-        <li><a href="/odin-recipes/recipes/lasagna.html">Receta para una rica Lasagna</a></li>
-        <li><a href="/odin-recipes/recipes/tacos.html">El mejor Taco a lo Mexicano!</a></li>
-        <li><a href="/odin-recipes/recipes/camarones.html">Camarones con Crema</a></li>
+        <li><a href="/recipes/lasagna.html">Receta para una rica Lasagna</a></li>
+        <li><a href="/recipes/tacos.html">El mejor Taco a lo Mexicano!</a></li>
+        <li><a href="/recipes/camarones.html">Camarones con Crema</a></li>
     </ul>
     
 </body>
