Volviendo a probar rutas absolutas en todos los links

--- a/recipes/camarones.html
+++ b/recipes/camarones.html
@@ -6,7 +6,7 @@
     <title>Camarones con Crema</title>
 </head>
 <body>
-    <a href="/index.html">Volver al inicio</a>
+    <a href="/odin-recipes/index.html">Volver al inicio</a>
     <section>
         <h1>Camarones con crema</h1>
         <img src="camarones.con.crema.jpg" alt="camarones"
@@ -28,7 +28,7 @@
             <li>Melt butter in a skillet over medium-high heat. Add bell peppers, onion, and garlic; sauté until tender and onion is translucent, 5 to 7 minutes. Transfer bell pepper mixture to a bowl; set skillet and drippings aside.</li>
 
             <li>Combine broth and green chiles in a saucepan; bring to a simmer. Off heat; add cream cheese, stirring slowly until incorporated. Add crema, chile de arbol, cumin, and oregano; stir. Add bell pepper mixture; stir to combine. Remove from heat.</li>
-            
+
             <li>Heat reserved skillet and drippings over medium-high heat. Add shrimp; cook until bright pink on the outside and meat is opaque, 1 to 2 minutes per side. Stir shrimp into cream cheese mixture and serve.</li>
         </ol>
     </section>
