Modificando la ruta absoluta con ../

--- a/recipes/camarones.html
+++ b/recipes/camarones.html
@@ -6,7 +6,7 @@
     <title>Camarones con Crema</title>
 </head>
 <body>
-    <a href="/odin-recipes/index.html">Volver al inicio</a>
+    <a href="../index.html">Volver al inicio</a>
     <section>
         <h1>Camarones con crema</h1>
         <img src="camarones.con.crema.jpg" alt="camarones"
