--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,7 +6,7 @@
     <title>Receta de Lasagna</title>
 </head>
 <body>
-    <a href="odin-recipes/index.html">Volver al inicio</a>
+    <a href="../index.html">Volver al inicio</a>
     <h1>La mejor lasagna!</h1>
 
     <section>
