--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -6,7 +6,7 @@
     <title>Recetas para Tacos</title>
 </head>
 <body>
-    <a href="odin-recipes/index.html">Volver al inicio</a>
+    <a href="../index.html">Volver al inicio</a>
 
     <section>
         <h1>EL mejor Taco que prepararas!</h1>
